--- a/src/components/JournalAddButton/JournalAddButton.css
+++ b/src/components/JournalAddButton/JournalAddButton.css
@@ -1,33 +1,11 @@
-.journal-item{
-	border-radius: 3px;
-	background: rgba(255, 255, 255, 0.03);
-	color: #fff;
-	padding: 20px;
-
-}
-.journal-item__header{
-	font-style: 18px;
+.journal-add{
+	padding: 10px;
+	display: flex;
+	gap:8px;
+	align-items: center;
+	justify-content: center;
+	font-size: 16px;
 	font-style: normal;
 	font-weight: 600;
-	line-height: 28px;
-}
-.journal-item__date{
-	color: rgba(255, 255, 255, 0.40);
-	font-style: 16px;
-	font-style: normal;
-	font-weight: 400;
 	line-height: normal;
-	
-}
-.journal-item__text{
-	color: rgba(255, 255, 255, 0.60);
-	font-style: 16px;
-	font-style: normal;
-	font-weight: 400;
-	line-height: normal;
-	overflow: hidden;
-}
-.journal-item__body{
-	display: flex;
-	gap: 10px;
 }
