--- a/src/components/JournalList/JournalList.css
+++ b/src/components/JournalList/JournalList.css
@@ -1,33 +1,5 @@
-.journal-item{
-	border-radius: 3px;
-	background: rgba(255, 255, 255, 0.03);
-	color: #fff;
-	padding: 20px;
-
-}
-.journal-item__header{
-	font-style: 18px;
-	font-style: normal;
-	font-weight: 600;
-	line-height: 28px;
-}
-.journal-item__date{
-	color: rgba(255, 255, 255, 0.40);
-	font-style: 16px;
-	font-style: normal;
-	font-weight: 400;
-	line-height: normal;
-	
-}
-.journal-item__text{
-	color: rgba(255, 255, 255, 0.60);
-	font-style: 16px;
-	font-style: normal;
-	font-weight: 400;
-	line-height: normal;
-	overflow: hidden;
-}
-.journal-item__body{
+.journal-list{
 	display: flex;
-	gap: 10px;
+	flex-direction: column;
+	gap: 30px;
 }
