--- a/src/components/CardButton/CardButton.css
+++ b/src/components/CardButton/CardButton.css
@@ -1,15 +1,39 @@
-.card-button{
+.card-button {
 	border-radius: 3px;
 	background: rgba(255, 255, 255, 0.03);
 	color: #fff;
 	padding: 20px;
- 	border: none;
-  	cursor: pointer;
+	border: none;
+	cursor: pointer;
 	text-align: start;
 	display: block;
 	width: 100%;
-}
-
-.card-button:hover{
+	position: relative; /* Добавляем для работы псевдоэлемента */
+	overflow: hidden; /* Скрываем выходящие элементы */
+  }
+  
+  .card-button:hover {
 	background: rgba(255, 255, 255, 0.10);
-}
+  }
+  
+  /* Стили для скелетной загрузки */
+  .card-button.block::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: -100%;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.5), transparent);
+	animation: loading 1.5s infinite;
+  }
+  
+  @keyframes loading {
+	0% {
+	  left: -100%;
+	}
+	100% {
+	  left: 100%;
+	}
+  }
+  
